# list-it

./: .gitignore  Cargo.toml  index.html  tailwind.config.js
app/: package.json  tsconfig.json
app/src/: App.tsx  constants.tsx  index.css
app/src/@types/: place.d.ts
app/src/components/: DropDown.tsx  ListIndexItem.tsx  SubmitButton.tsx
app/src/components/Item/: ImageItem.tsx  ListItem.tsx  TextItem.tsx
app/src/components/ListItem/: ListItem.tsx
app/src/components/NewListItem/: ImageInput.tsx  Inputs.tsx  ListInput.tsx  PlaceInput.tsx  TextInput.tsx
app/src/containers/: List.tsx  ListIndex.tsx  NewList.tsx
app/src/context/: listContext.tsx
app/src/customTypes/: list.d.ts
src/: main.rs  route.rs  store.rs
src/components/: list.rs  list_index.rs  list_index_item.rs  list_item.rs  list_new.rs  mod.rs
styles/: tailwind.css
