[package]
name = "list-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
serde = { version = "1.0.187", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"

yew-router = "0.17"
gloo-console = "0.3.0"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
bson = "2.6.1"
